# multithreading_3A

./: LICENSE  README.md  boss.py  minion.py  proxy.py  queueManager.py  queueclient.py  start.sh  task.py  test_task.py
.github/workflows/: ci.yml
cplusplus/: CMakeLists.txt  low_level.cpp  task.cpp
data/: result_cpp.txt  result_py.txt
src/: boss.py  queueManager.py  queueclient.py  task.py
